# IntPointsFEM

./: .cproject  .gitignore  .project  CMakeLists.txt  ComputeSigmaKernel.h  CudaCalls.cu  CudaCalls.h  FunctionsSigmaProjection.h  FunctionsStressStrain.h  FunctionsTangentOperator.h  KernelsComputeSigma.h  KernelsMatrixAssemble.h  MatMul.h  MatMulKernels.h  MatrixAssembleKernel.h  README.md  SigmaProjectionKernels.h  SpectralDecomp.h  SpectralDecompKernels.h  StressStrainKernels.h  TBCData.cpp  TBCData.h  TElastoPlasticData.cpp  TElastoPlasticData.h  TPBrConstitutiveLawProcessor.cpp  TPBrConstitutiveLawProcessor.h  TPBrConstitutiveLawProcessor_impl.h  TPBrIntPointsStructMatrix.cpp  TPBrIntPointsStructMatrix.h  TPBrIntPointsStructMatrix_impl.h  TPBrIrregularBlocksMatrix.cpp  TPBrIrregularBlocksMatrix.h  TPBrNumericalIntegrator.cpp  TPBrNumericalIntegrator.h  TPBrNumericalIntegrator_impl.h  TPZCoefToGradSol.cpp  TPZCoefToGradSol.h  TPZConstitutiveLaw.cpp  TPZConstitutiveLaw.h  TPZConstitutiveLawProcessor.cpp  (+34 more)
Results/: Results.nb  Tests.ods  Tests.xlsx  tests.nb
Results/CPU_MODIFIED/order1-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order1-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order1-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order1-mesh4/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order1-mesh5/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order2-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order2-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order2-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order2-mesh4/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order3-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order3-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order3-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_MODIFIED/order3-mesh4/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order1-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order1-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order1-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order1-mesh4/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order1-mesh5/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order2-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order2-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order2-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order2-mesh4/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order3-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order3-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order3-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/CPU_NOT_MODIFIED/order3-mesh4/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order1-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order1-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order1-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order1-mesh4/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order1-mesh5/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order2-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order2-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order2-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order2-mesh4/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order3-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order3-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order3-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_MODIFIED/order3-mesh4/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_NOT_MODIFIED/order1-mesh1/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_NOT_MODIFIED/order1-mesh2/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  out-5.txt
Results/GPU_NOT_MODIFIED/order1-mesh3/: out-1.txt  out-2.txt  out-3.txt  out-4.txt  (+1 more)
_Headers/: CMakeLists.txt  TPZSolveMatrix.h  TRKSolution.h
_SourcesCPP/: CMakeLists.txt  TPZIntPointsFEM.cpp  TPZSolveMatrix.cpp  TRKSolution.cpp
gmsh/: Wellbore_Cricular_2D_SEST2D.geo  Wellbore_Cricular_2D_SEST2D.msh  wellbore-coarse.msh  wellbore.geo  wellbore.msh  wellbore_15k.msh  wellbore_15p876k.msh  wellbore_3k.msh  wellbore_3p844k.msh  wellbore_mix.geo  wellbore_mix.msh
mathematica_notebooks/: Bradley_Analytic.nb  Bradley_Analytic_II.nb  LinearCaseVerification.nb
mathematica_notebooks/Elementary_Contribution/: ElasticElementaryContribution.nb
mathematica_notebooks/LinearCase/: LinearCaseVerification.nb
mathematica_notebooks/RK_Verification/: ElasticComparison.nb  ElasticRKdata.txt  ElastoPlasticComparison.nb  ElastoPlasticComparison_CPU.nb  ElastoPlasticIntPoints-CPU.csv  ElastoPlasticIntPoints.csv  ElastoPlasticRKdata.txt
scripts/: all-tests.sh  cpu-mod-blocks.sh  cpu-mod-sparse.sh  gpu-mod-blocks.sh  gpu-mod-sparse.sh  gpu-no-shared.sh  gpu-shared.sh  pz-mod.sh  pz.sh  tests-cpu-mod.sh  tests-cpu.sh  tests-gpu-mod.sh  tests-gpu.sh  tests-pz-mod.sh  tests-pz.sh
(+180 files in other folders)
